@@ -633,3 +633,4 @@
 	- improved summary a bit
 	- "called within reset scope by" errors did not include stderr
 	- added hard-coded "runtime error:" reporting for now (only generated by UndefinedBehaviorSanitizer)
+	- added tagmap report (report_type 3)
